Fixed Name at the end

--- a/band.html
+++ b/band.html
@@ -30,6 +30,6 @@
                 </ul>
         </ul>
         <h4><a href = "http://www.skillet.com/">Skillet Home Page.</a></h4>
-        <h5><a href = "mailto:s1422335@student.mcckc.edu?Subject=CSIS128">s1422335@student.mcckc.edu</a>
+        <h5>Nathan Craig<a href = "mailto:s1422335@student.mcckc.edu?Subject=CSIS128">s1422335@student.mcckc.edu</a>
     </body>
 </html>
