Modified the index page to give an index of resources in the directory

--- a/index.html
+++ b/index.html
@@ -1,5 +1,17 @@
+<!DOCTYPE html>
 <html>
     <body>
-        Nathan Craig.
+        <h1>Index</h1>
+        <ul>
+            <li>
+                <a href="https://craignathan.github.io/CSIS128/band.html" target="_blank">band.html</a>
+            </li>
+            <li>
+                <a href="https://craignathan.github.io/CSIS128/freegraphics.html" target="_blank">freegraphics.html</a>
+            </li>
+            <li>
+                <a href="https://craignathan.github.io/CSIS128/recipe.html" target="_blank">recipe.html</a>
+            </li>
+        </ul>
     </body>
 </html>
