--- a/unit4project1/craig.html
+++ b/unit4project1/craig.html
@@ -7,7 +7,7 @@
     <body>
         <h1>Nathan Craig</h1>
         <p>I enjoy playing games, listening to music, and hanging out with friends.</p>
-        <div><img src="picture.jpg" alt="Nathan Craig"></div>
+        <div><img src="picture.JPG" alt="Nathan Craig"></div>
         <p>Nathan Craig | <a href = "mailto:s1422335@student.mcckc.edu?Subject=CSIS128">s1422335@student.mcckc.edu<a></p>
     </body>
 </html>
