--- a/csisproject/flowchart.html
+++ b/csisproject/flowchart.html
@@ -1,2 +1,2 @@
-<img src="./pictures/flowchart.png">
+<img src="./pictures/flowchart.PNG">
 <h3>Nathan Craig | <a href = "mailto:s1422335@student.mcckc.edu">s1422335@student.mcckc.edu</h3>
