--- a/csisproject/swordtypes.html
+++ b/csisproject/swordtypes.html
@@ -20,7 +20,7 @@
         </table>
         <div class="pagebody">
             <div class="pagebodywelcome">
-                Sword Type's
+                Type's of Swords
             </div>
             <table id="metalstable">
                 <tr>
