--- a/csisproject/home.html
+++ b/csisproject/home.html
@@ -13,7 +13,7 @@
                 <tr class="nav">
                     <td class="nav"><button id="swordtype" onclick="window.location.href='./swordtypes.html'">Sword Type's</button></td>
                     <td class="nav"><button id="swordmetal" onclick="window.location.href='./swordmetal.html'">Sword Metal's</button></td>
-                    <td class="nav"><button id="swordbuying" onclick="window.location.href='./swordtypes.html'">Sword Buying(In Progress)</button></td>
+                    <td class="nav"><button id="swordbuying" onclick="window.location.href='./swordcomparison.html'">Sword Price Comparison</button></td>
                     <td class="nav"><button id="katana" onclick="window.location.href='./swordtypes.html'">Katana's(In Progress)</button></td>
                 </tr>
             </tbody>
@@ -24,7 +24,7 @@
             </div>
             <div class="pagebodyintro">
                 Welcome to Tetra Blade's. This website is a dedicated to helping users, like yourself, learn about different type's of swords, their metal compsitition and differences in buying cheap and expensive swords. 
-                    Also, we have a special section on Katana's that will tell you about their history and difference in quality of katana's for expmple diffences between a hand forged and production line katana's.
+                    Also, we have a special section on Katana's that will tell you about their history and difference in quality of katana's for example diffences between a hand forged and production line katana's. To navigate the site use the pictures or through the navigation bar. Click on Tetra Blade's to come back to the homepage.
             </div>
             <table id="picnavT">
                 <tr id="picnav">
@@ -39,7 +39,7 @@
                 </tr>
                 <tr id="picnav">
                     <td>
-                        Sword Buying(In Progress)
+                        Sword Price Comparison
                         <div class="swordbuying"><img src="./pictures/swordcheapvsexpen.jpg" onclick="window.location.href='./swordtypes.html'" style="width:300px;height:300px"></div>
                     </td>
                     <td>
