--- a/csisproject/swordtypes.html
+++ b/csisproject/swordtypes.html
@@ -13,14 +13,14 @@
                 <tr class="nav">
                     <td class="nav"><button id="swordtype" onclick="window.location.href='./swordtypes.html'">Sword Type's</button></td>
                     <td class="nav"><button id="swordmetal" onclick="window.location.href='./swordmetal.html'">Sword Metal's</button></td>
-                    <td class="nav"><button id="swordbuying" onclick="window.location.href='./swordtypes.html'">Sword Buying</button></td>
-                    <td class="nav"><button id="katana" onclick="window.location.href='./swordtypes.html'">Katana's</button></td>
+                    <td class="nav"><button id="swordbuying" onclick="window.location.href='./swordcomparison.html'">Sword Price Comparison</button></td>
+                    <td class="nav"><button id="katana" onclick="window.location.href='./swordtypes.html'">Katana's(In Progress)</button></td>
                 </tr>
             </tbody>
         </table>
         <div class="pagebody">
             <div class="pagebodywelcome">
-                Type's of Swords
+                Sword Type's
             </div>
             <table id="metalstable">
                 <tr>
