--- a/csisproject/katana.html
+++ b/csisproject/katana.html
@@ -20,60 +20,52 @@
         </table>
         <div class="pagebody">
             <div class="pagebodywelcome">
-                Sword Price Comparison
+                Katana's
             </div>
-            <table id="swordcomparison">
+            <table id="katana">
                 <tr>
-                    <th>
-                        Expensive (Carbon, Spring, and Tool Steel)
-                    </th>
-                    <th>
-                        Cheap (Stainless Steel)
-                    </th>
+                    <th>Expensive Katana's $600+ (none stainless)</th>
+                    <th>Cheap Katana's (stainless steel) </th>
                 </tr>
                 <tr>
                     <td class="expensive">
-                        Goods
+                        Pros
                         <ul>
                             <li>Higher Quality</li>
                             <li>Stronger/Harder Steel</li>
                             <li>Better Blade Retention</li>
                             <li>Usable for on-contact practice</li>
+                            <li>has a full tang blade and handle</li>
+                            <li>Made of Steel that is not Stainless</li>
                         </ul>
-                        Bads
+                        Cons
                         <ul>
                             <li>Expensive (lowest price for a okay sword will be around $100)</li>
                         </ul>
                     </td>
                     <td class="cheap">
-                        Goods
+                        Pros
                         <ul>
                             <li>Good for Display Items</li>
                             <li>Cheaper to produce and manufacture</li>
                             <li>only usable for none contact practice</li>
-                            <li>Good for knives or any blades under 12" long</li>
-                            <li>neverfull tang, handle is ussually never connected to the blade in one peice</li>
                         </ul>
-                        Bads
+                        Cons
                         <ul>
                             <li>Lower Quality</li>
                             <li>Brittle/Weak Steel</li>
                             <li>Worse Blade Retention</li>
-                            <li>High probabilty to shattering if blade is longer than 12" long</li>
+                            <li>Neverfull tang, handle is ussually never connected to the blade in one peice</li>
+                            <li>If swung may fall off the handle</li>
+                            <li>Poor materials may lead to self harm</li>
                         </ul>
                     </td>
                 </tr>
                 <tr>
-                    <td class="video"><iframe width="100%" height="250" src="https://www.youtube.com/embed/peY3OgGfJvY" frameborder="0" allowfullscreen></iframe>
-                    </td>
-                    <td class="video"><iframe width="100%" height="250" src="https://www.youtube.com/embed/Bh5H2Lw-CPs?rel=0" frameborder="0" allowfullscreen></iframe>
-                    </td>
-                </tr>
-                <tr>
-                    <td colspan=2>
-                        <ul>
-                            <li><a href="./recommendvendor.html">Recommended Online Sword Vendor's</a>
-                        </ul>
+                    <td colspan=2>When it comes to katana blades there are many different types of metals that can be used for the swords.
+                        However The stainless steel katana's are simply not sutable for a katana unless it is a display sword. Meaning it has no 
+                        functional use. When it comes to the blade of a katana the bare minimum steel needed for that type of sword is 1060 Carbon steel.
+                        However, the Most Optimal steel would be some form of spring or tool steel. Which has better strength than the Carbon steels and more pliable.
                     </td>
                 </tr>
             </table>
