--- a/csisproject/swordtypes.html
+++ b/csisproject/swordtypes.html
@@ -10,11 +10,11 @@
                         <p class="title" onclick="window.location.href='./home.html'">Tetra Blade's</p>
                     </td>
                 </tr>
-                <tr class="nav">
+                 <tr class="nav">
                     <td class="nav"><button id="swordtype" onclick="window.location.href='./swordtypes.html'">Sword Type's</button></td>
                     <td class="nav"><button id="swordmetal" onclick="window.location.href='./swordmetal.html'">Sword Metal's</button></td>
                     <td class="nav"><button id="swordbuying" onclick="window.location.href='./swordcomparison.html'">Sword Price Comparison</button></td>
-                    <td class="nav"><button id="katana" onclick="window.location.href='./swordtypes.html'">Katana's(In Progress)</button></td>
+                    <td class="nav"><button id="katana" onclick="window.location.href='./katana.html'">Katana's</button></td>
                 </tr>
             </tbody>
         </table>
