--- a/csisproject/recommendvendor.html
+++ b/csisproject/recommendvendor.html
@@ -18,6 +18,11 @@
                 </tr>
             </tbody>
         </table>
+        <form>
+            Let us know any webstore's you think are good sword sellers<br>
+            <input type="text" name="opinion">
+            <input type="submit" value="Submit">
+        </form>
         <div class="pagebody">
             <div class="pagebodywelcome">
                 Recommended Sword Vendor's
