--- a/csisSemesterProject/home.html
+++ b/csisSemesterProject/home.html
@@ -1,7 +1,7 @@
 <html>
     <head>
         <link rel="stylesheet" type="text/css" href="home.css"/>
-        <link rel='shortcut icon' href='./pictures/favicon.PNG' type='image/x-icon'/ >
+        <link rel='shortcut icon' href='./pictures/favicon.png' type='image/x-icon'/ >
     </head>
     <body>
         <div id=wrap>
