--- a/csisSemesterProject/home.html
+++ b/csisSemesterProject/home.html
@@ -12,7 +12,7 @@
                             <p class="title">Tetra Blade's</p>
                         </td>
                         <td>
-                            <img class="thumbnail" src="./pictures/cross_sword.PNG" style="width:75%;height:auto;" onclick="window.location.href='./home.html'">
+                            <img class="thumbnail" src="./pictures/cross_sword.png" style="width:75%;height:auto;" onclick="window.location.href='./home.html'">
                         </td>
                     </tr>
                 <tr class="nav">
