--- a/csisSemesterProject/recommendvendor.html
+++ b/csisSemesterProject/recommendvendor.html
@@ -1,7 +1,7 @@
 <html>
     <head>
         <link rel="stylesheet" type="text/css" href="home.css"/>
-        <link rel='shortcut icon' href='./pictures/favicon.PNG' type='image/x-icon'/ >
+        <link rel='shortcut icon' href='./pictures/favicon.png' type='image/x-icon'/ >
         <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
         <script language="JavaScript" type="text/javascript" src="recommendvendor.js"></script>
     </head>
@@ -14,7 +14,7 @@
                             <p class="title" onclick="window.location.href='./home.html'">Tetra Blade's</p>
                         </td>
                         <td>
-                            <img class="thumbnail" src="./pictures/cross_sword.PNG" style="width:75%;height:auto;" onclick="window.location.href='./home.html'">
+                            <img class="thumbnail" src="./pictures/cross_sword.png" style="width:75%;height:auto;" onclick="window.location.href='./home.html'">
                         </td>
                     </tr>
                     <tr class="nav">
