--- a/csisSemesterProject/home.html
+++ b/csisSemesterProject/home.html
@@ -30,7 +30,7 @@
                 </div>
                 <div class="pagebodyintro">
                     Welcome to Tetra Blade's. This website is a dedicated to helping users, like yourself, learn about different type's of swords, their metal compsitition and differences in buying cheap and expensive swords. 
-                        Also, we have a special section on Katana's that will tell you about their history and difference in quality of katana's for example diffences between a hand forged and production line katana's. To navigate the site use the pictures or through the navigation bar. Click on Tetra Blade's to come back to the homepage.
+                        Also, we have a special section on Katana's difference in quality of katana's for example diffences between an expensive carbon 1055 or better steel and a mall bought stainless steel katana. To navigate the site use the pictures or through the navigation bar. Click on Tetra Blade's to come back to the home page.
                 </div>
                 <table id="picnavT">
                     <tr id="picnav">
