--- a/csisSemesterProject/swordmetal.html
+++ b/csisSemesterProject/swordmetal.html
@@ -113,7 +113,7 @@
                         <td class="metalname">S7 Shock Steel</td>
                         <td class="metaldef">S7 Shock Steel is a shock resistant steel and is also shares many characteristics with L6 Tool Steel when heat treated Properly. S7 Shock Steel is rarely used in sword production so it make it a very sought after Steel.</td>
                     </tr> 
-                    <tr><td colspan=2 class="image"><h1>Damacus Steel/Folded Steel</h1></td></tr>  
+                    <tr><td colspan=2 class="image"><h1>Damascus Steel/Folded Steel</h1></td></tr>  
                     <tr>
                         <td class="metalname">Damascus Steel/Folded Steel</td>
                         <td class="metaldef">Damascus Steel is another term for folded Steel. Most Damascus swords dont come under a price tage of $500 and is the older way of how Japanese Katana sword smith's use to make there swords. If not folded corectly it can be considered weaker than 440 Stainless Steel.</td>
