--- a/csisSemesterProject/katana.html
+++ b/csisSemesterProject/katana.html
@@ -30,7 +30,7 @@
                 </div>
                 <table id="katana">
                     <tr>
-                        <th>Expensive Katana's $600+ (none stainless)</th>
+                        <th>Expensive Katana's $600+ (Carbon, Spring, Tool or Damascus Steel)</th>
                         <th>Cheap Katana's (stainless steel) </th>
                     </tr>
                     <tr>
